# SAMP-EmptyProject

./: CMakeLists.txt  README.md
src/: main.cpp
